	PR rtl-optimization/78559 	* combine.c (try_combine): Discard REG_EQUAL and REG_EQUIV for 	other_insn in combine.

gcc/testsuite
	PR rtl-optimization/78559
	* gcc.c-torture/execute/pr78559.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244979 138bc75d-0d04-0410-961f-82ee72b054a4